WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91647
[EFL][WK2] ewk_cookie_manager_persistent_storage_set is not exported
https://bugs.webkit.org/show_bug.cgi?id=91647
Summary
[EFL][WK2] ewk_cookie_manager_persistent_storage_set is not exported
Chris Dumez
Reported
2012-07-18 11:57:10 PDT
I missed a EAPI in ewk_cookie_manager.h to export ewk_cookie_manager_persistent_storage_set() function.
Attachments
Patch
(1.51 KB, patch)
2012-07-18 11:58 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-07-18 11:58:56 PDT
Created
attachment 153063
[details]
Patch
WebKit Review Bot
Comment 2
2012-07-18 13:27:37 PDT
Comment on
attachment 153063
[details]
Patch Clearing flags on attachment: 153063 Committed
r123010
: <
http://trac.webkit.org/changeset/123010
>
WebKit Review Bot
Comment 3
2012-07-18 13:27:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug