[EFL][WK2] ewk_cookie_manager_persistent_storage_set is not exported https://bugs.webkit.org/show_bug.cgi?id=91647

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-07-18
Reviewed by Gustavo Noronha Silva.

Properly export ewk_cookie_manager_persistent_storage_set in
ewk_cookie_manager.h by using EAPI.

* UIProcess/API/efl/ewk_cookie_manager.h:

Canonical link: https://commits.webkit.org/109468@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123010 268f45cc-cd09-0410-ab3c-d52691b4dbfc